# reactos

base/services/: CMakeLists.txt
base/services/vds/: CMakeLists.txt  vds.cpp
